--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -318,8 +318,9 @@
   }
 
   .achievementItem,
+  .featureItem,
   .fullDesc {
-    font-size: 0.85rem;
+    font-size: 0.8rem;
   }
 
   .techBadge {
