--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -297,6 +297,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: linear-gradient(
+    180deg,
+    rgba(5, 5, 5, 1) 0%,
+    rgba(25, 25, 28, 1) 50%,
+    rgba(5, 5, 5, 1) 100%
+  );
 }
 
 .featuredSection::before {
@@ -647,7 +653,7 @@
   .sectionTitle {
     font-size: 1.3rem;
     padding: 0;
-    margin: 0;
+    margin: 0 0 1.5rem 0;
     width: auto;
   }
 
